Updating Commands to use new FileSystemUpdater to ensure that root is updated correctly when new FS is returned. Added logs for debugging